--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
               <a class="nav-link" href="#offerings">Practice </a>
             </li>
 
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#reviews">Reviews</a>
-            </li>
+            </li> -->
 
             <li class="nav-item">
               <a class="nav-link" href="#news">News</a>
@@ -95,7 +95,7 @@
             <h2 class="text-white mt-3 mb-4" data-aos="fade-left">
               PROFESSIONAL CORPORATION
             </h2>
-            <div class="'hero-btns" data-aos="fade-up">
+            <div class="hero-btns mb-6" data-aos="fade-up">
               <a href="#speakers" class="btn btn-light me-2">OUR TEAM</a>
               <a href="#contact" class="btn btn-brand ms-2">CONTACT</a>
             </div>
@@ -186,8 +186,18 @@
           >
             <div class="section-title">
               <h1 class="display-4 fw-semibold">LEGAL TEAM</h1>
+              <p id="widetext" class="text-white text-center">
+                We support our clients with a Legal Team comprised of attorneys
+                and a paralegal who have extensive trial, evidentiary, and
+                negotiation experience. From the outset, we prepare our cases
+                and clients for presentation to the court by conducting early
+                document review, investigation, hands-on case management, and
+                early identification of difficult legal issues. We intend to
+                assist clients in reaching out-of-court settlements where
+                possible. When settlement is not possible, we are prepared and
+                ready to fervently advocate for our clients in court.
+              </p>
               <div class="line"></div>
-              <!-- <p>Meet the minds.</p> -->
             </div>
           </div>
         </div>
@@ -195,7 +205,9 @@
           <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
-                <img src="./assets/images/sarah.jpg" />
+                <a href="./attorneys.html#sarah">
+                  <img src="./assets/images/sarah.jpg" />
+                </a>
               </div>
               <div class="speaker-content">
                 <h4 class="text-white">Sarah M. Neiley</h4>
@@ -206,7 +218,9 @@
           <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
-                <img src="./assets/images/mackenzie.jpg" />
+                <a href="./attorneys.html#mackenzie">
+                  <img src="./assets/images/mackenzie.jpg" />
+                </a>
               </div>
               <div class="speaker-content">
                 <h4 class="text-white">Mackenzie J. Morris</h4>
@@ -217,13 +231,55 @@
           <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
-                <img src="./assets/images/zoe.jpg" />
+                <a href="./attorneys.html#zoe">
+                  <img src="./assets/images/zoe.jpg" />
+                </a>
               </div>
               <div class="speaker-content">
                 <h4 class="text-white">Zoe M. Dotson</h4>
                 <p class="mb-0 text-white">Paralegal</p>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- counter -->
+    <section id="counter" class="section-padding">
+      <div class="container text-center">
+        <div class="row g-4">
+          <div
+            class="col-lg-3 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
+            <h1 class="display-4">300+</h1>
+            <h6 class="text-uppercase mt-3 mb-0">Succesful Cases</h6>
+          </div>
+          <div
+            class="col-lg-3 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="250"
+          >
+            <h1 class="display-4">300+</h1>
+            <h6 class="text-uppercase mt-3 mb-0">Saisfied Clients</h6>
+          </div>
+          <div
+            class="col-lg-3 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="350"
+          >
+            <h1 class="display-4">150+</h1>
+            <h6 class="text-uppercase mt-3 mb-0">Families Served</h6>
+          </div>
+          <div
+            class="col-lg-3 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="450"
+          >
+            <h1 class="display-4">$20,000,000+</h1>
+            <h6 class="text-uppercase mt-3 mb-0">Won for Clients</h6>
           </div>
         </div>
       </div>
@@ -331,46 +387,6 @@
       </div>
     </section>
 
-    <!-- counter -->
-    <section id="counter" class="section-padding">
-      <div class="container text-center">
-        <div class="row g-4">
-          <div
-            class="col-lg-3 col-sm-6"
-            data-aos="fade-down"
-            data-aos-delay="150"
-          >
-            <h1 class="display-4">300+</h1>
-            <h6 class="text-uppercase mt-3 mb-0">Succesful Cases</h6>
-          </div>
-          <div
-            class="col-lg-3 col-sm-6"
-            data-aos="fade-down"
-            data-aos-delay="250"
-          >
-            <h1 class="display-4">300+</h1>
-            <h6 class="text-uppercase mt-3 mb-0">Saisfied Clients</h6>
-          </div>
-          <div
-            class="col-lg-3 col-sm-6"
-            data-aos="fade-down"
-            data-aos-delay="350"
-          >
-            <h1 class="display-4">150+</h1>
-            <h6 class="text-uppercase mt-3 mb-0">Families Served</h6>
-          </div>
-          <div
-            class="col-lg-3 col-sm-6"
-            data-aos="fade-down"
-            data-aos-delay="450"
-          >
-            <h1 class="display-4">$20,000,000+</h1>
-            <h6 class="text-uppercase mt-3 mb-0">Won for Clients</h6>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <!-- gallery -->
 
     <!-- <section id="gallery" class="section-padding">
@@ -466,7 +482,8 @@
     </section> -->
 
     <!-- reviews -->
-    <section id="reviews" class="section-padding bg-light">
+
+    <!-- <section id="reviews" class="section-padding bg-light">
       <div class="container">
         <div class="row">
           <div
@@ -705,7 +722,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- contact -->
     <section id="contact" class="section-padding">
@@ -864,12 +881,6 @@
                 <a href="#">
                   <i class="ri-linkedin-box-line"></i>
                 </a>
-                <a href="#">
-                  <i class="ri-facebook-box-line"></i>
-                </a>
-                <a href="#">
-                  <i class="ri-spotify-line"></i>
-                </a>
               </div>
             </div>
             <div class="footer-box col-lg-3 col-sm-6">
@@ -883,11 +894,11 @@
                   <a href="#speakers">Our Team</a>
                 </li>
                 <li>
-                  <a href="#offerings">Practice</a>
+                  <a href="#offerings">Our Practice</a>
                 </li>
-                <li>
+                <!-- <li>
                   <a href="#reviews">Reviews</a>
-                </li>
+                </li> -->
                 <li>
                   <a href="#news">News</a>
                 </li>
@@ -898,7 +909,7 @@
               <div class="line"></div>
               <ul class="footer-box">
                 <li>
-                  <a href="#contact">Careers</a>
+                  <a href="./careers.html">Careers</a>
                 </li>
                 <li>
                   <a href="#contact">Get In Touch</a>
