--- a/index.html
+++ b/index.html
@@ -746,12 +746,22 @@
           data-aos-delay="250"
         >
           <div class="col-lg-8">
-            <form action="#" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
+            <form
+              action="https://api.web3forms.com/submit"
+              method="POST"
+              class="row g-3 p-lg-5 p-4 bg-white theme-shadow"
+            >
               <div class="form-group col-lg-6">
+                <input
+                  type="hidden"
+                  name="access_key"
+                  value="59bed80c-9e5f-4b65-84f4-cbe493418148"
+                />
                 <input
                   type="text"
                   class="form-control"
                   placeholder="First Name"
+                  required
                 />
               </div>
               <div class="form-group col-lg-6">
@@ -759,6 +769,7 @@
                   type="text"
                   class="form-control"
                   placeholder="Last Name"
+                  required
                 />
               </div>
               <div class="form-group col-lg-12">
@@ -766,10 +777,16 @@
                   type="email"
                   class="form-control"
                   placeholder="Email Address"
+                  required
                 />
               </div>
               <div class="form-group col-lg-12">
-                <input type="text" class="form-control" placeholder="Subject" />
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Subject"
+                  required
+                />
               </div>
               <div class="form-group col-lg-12">
                 <textarea
@@ -777,8 +794,10 @@
                   class="form-control"
                   rows="5"
                   placeholder="Message"
+                  required
                 ></textarea>
               </div>
+
               <div class="form-group col-lg-12 d-grid">
                 <button class="btn btn-brand">Send Messsage</button>
               </div>
