updates to styling based on rebrand

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<h tml lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,11 +23,11 @@
   </head>
   <body data-spy="scroll" data-target=".navbar">
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-white sticky-top">
+    <nav class="navbar navbar-expand-lg  sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
-            src="./assets/images/logo-mid.png"
+            src="./assets/images/AVL-LOGO-Sand.png"
             alt="logo"
             width="100%"
             id="logo"
@@ -63,9 +63,9 @@
               <a class="nav-link" href="#reviews">Reviews</a>
             </li> -->
 
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#news">News</a>
-            </li>
+            </li> -->
           </ul>
           <a href="#contact" class="btn btn-brand ms-lg-3">Contact</a>
         </div>
@@ -87,16 +87,16 @@
         <div class="row">
           <div class="col-12">
             <h1
-              class="text-uppercase text-white fw-semibold display-1"
+              class="text-uppercase fw-semibold display-1"
               data-aos="fade-right"
             >
-              ASPEN VALLEY LAW
+              ASPEN VALLEY LAW, P.C.
             </h1>
-            <h2 class="text-white mt-3 mb-4" data-aos="fade-left">
+            <!-- <h3 class="text-white mt-3 mb-4" data-aos="fade-left">
               PROFESSIONAL CORPORATION
-            </h2>
+            </h3> -->
             <div class="hero-btns mb-6" data-aos="fade-up">
-              <a href="#speakers" class="btn btn-light me-2">OUR TEAM</a>
+              <a href="#speakers" class="btn btn-brand-light me-2">OUR TEAM</a>
               <a href="#contact" class="btn btn-brand ms-2">CONTACT</a>
             </div>
           </div>
@@ -125,7 +125,7 @@
           </div>
         </div>
         <div class="row justify-content-between align-items-center">
-          <div class="col-lg-6" data-aos="fade-down" data-aos-delay="150">
+          <div class="col-lg-6" id="abt-img" data-aos="fade-down" data-aos-delay="150">
             <img src="./assets/images/about.jpg" alt="about" />
           </div>
           <div class="col-lg-5" data-aos="fade-down" data-aos-delay="150">
@@ -140,21 +140,21 @@
 
             <div class="d-flex pt-4 mb-3">
               <div class="iconbox me-4 bg-light">
-                <i class="ri-auction-line"></i>
-              </div>
-
-              <div>
-                <h5 class="abouth5">Integrity</h5>
-                <p>Our priority is you.</p>
-              </div>
-            </div>
-            <div class="d-flex mb-3">
-              <div class="iconbox me-4 bg-light">
                 <i class="ri-scales-3-fill"></i>
               </div>
 
               <div>
-                <h5 class="abouth5">Expertise</h5>
+                <h5 class="abouth5">Integrity</h5>
+                <p>Honest legal advice.</p>
+              </div>
+            </div>
+            <div class="d-flex mb-3">
+              <div class="iconbox me-4 bg-light">
+                <i class="ri-auction-line"></i>
+              </div>
+
+              <div>
+                <h5 class="abouth5">Advocacy</h5>
                 <p>We only offer the best to our clients.</p>
               </div>
             </div>
@@ -187,15 +187,15 @@
             <div class="section-title">
               <h1 class="display-4 fw-semibold">LEGAL TEAM</h1>
               <p id="widetext" class="text-white text-center">
-                We support our clients with a Legal Team comprised of attorneys
-                and a paralegal who have extensive trial, evidentiary, and
-                negotiation experience. From the outset, we prepare our cases
-                and clients for presentation to the court by conducting early
+                We support our clients with a legal team comprised of attorneys
+                paralegals, and staff who have extensive trial, evidentiary, and
+                negotiation experience. Our legal team engages in thorough
+                preparation of our clients and our cases by conducting early
                 document review, investigation, hands-on case management, and
                 early identification of difficult legal issues. We intend to
                 assist clients in reaching out-of-court settlements where
-                possible. When settlement is not possible, we are prepared and
-                ready to fervently advocate for our clients in court.
+                possible. When settlement is not possible, we are prepared to
+                fervently advocate for our clients in court.
               </p>
               <div class="line"></div>
             </div>
@@ -263,7 +263,7 @@
             data-aos-delay="250"
           >
             <h1 class="display-4">300+</h1>
-            <h6 class="text-uppercase mt-3 mb-0">Saisfied Clients</h6>
+            <h6 class="text-uppercase mt-3 mb-0">Satisfied Clients</h6>
           </div>
           <div
             class="col-lg-3 col-sm-6"
@@ -297,10 +297,10 @@
             <div class="section-title">
               <h1 class="display-4 fw-semibold">AREAS OF PRACTICE</h1>
               <div class="line"></div>
-              <p>
+              <!-- <p>
                 Aspen Valley Law covers a wide variety of cases, and our areas
                 of practice are expanding rapidly.
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
@@ -315,7 +315,7 @@
                 <i class="ri-parent-line"></i>
               </div>
               <h5 class="mt-4 mb-3">Family Law</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p>Read More...</p>
             </div>
           </div>
           <div
@@ -328,7 +328,7 @@
                 <i class="ri-grid-line"></i>
               </div>
               <h5 class="mt-4 mb-3">Criminal Defense</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p>Read More...</p>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
@@ -338,49 +338,10 @@
               data-aos-delay="350"
             >
               <div class="iconbox">
-                <i class="ri-shake-hands-line"></i>
+                <i class="ri-scales-3-fill"></i>
               </div>
-              <h5 class="mt-4 mb-3">Civil Rights</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <div
-              class="offerings theme-shadow p-lg-5 p-4"
-              data-aos="fade-down"
-              data-aos-delay="450"
-            >
-              <div class="iconbox">
-                <i class="ri-hospital-line"></i>
-              </div>
-              <h5 class="mt-4 mb-3">Personal Injury</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <div
-              class="offerings theme-shadow p-lg-5 p-4"
-              data-aos="fade-down"
-              data-aos-delay="550"
-            >
-              <div class="iconbox">
-                <i class="ri-stethoscope-line"></i>
-              </div>
-              <h5 class="mt-4 mb-3">Healthcare</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <div
-              class="offerings theme-shadow p-lg-5 p-4"
-              data-aos="fade-down"
-              data-aos-delay="650"
-            >
-              <div class="iconbox">
-                <i class="ri-building-4-line"></i>
-              </div>
-              <h5 class="mt-4 mb-3">Employment Law</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <h5 class="mt-4 mb-3">Appeals</h5>
+              <p>Read More...</p>
             </div>
           </div>
         </div>
@@ -755,7 +716,7 @@
                 <input
                   type="hidden"
                   name="access_key"
-                  value="59bed80c-9e5f-4b65-84f4-cbe493418148"
+                  value="cbf589d6-f737-4697-9136-922e5fa95a11"
                 />
                 <input
                   type="text"
@@ -808,7 +769,7 @@
     </section>
 
     <!-- news -->
-    <section id="news" class="section-padding bg-light">
+    <!-- <section id="news" class="section-padding bg-light">
       <div class="container">
         <div class="row">
           <div
@@ -880,7 +841,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- footer -->
     <footer class="bg-dark">
@@ -918,9 +879,9 @@
                 <!-- <li>
                   <a href="#reviews">Reviews</a>
                 </li> -->
-                <li>
+                <!-- <li>
                   <a href="#news">News</a>
-                </li>
+                </li> -->
               </ul>
             </div>
             <div class="footer-box col-lg-3 col-sm-6">
