--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     "
     />
     <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
-      rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
+    rel="stylesheet"
     />
     <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="icon" type="image/x-icon" href="./assets/images/FAVI.png" />
@@ -53,7 +54,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#speakers">Legal Team</a>
+              <a class="nav-link" href="#speakers">Team</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#offerings">Practice </a>
@@ -90,15 +91,15 @@
               class="text-uppercase fw-semibold display-1"
               data-aos="fade-right"
             >
-              ASPEN VALLEY LAW, P.C.
+            NEILEY & MORRIS
             </h1>
             <!-- <h3 class="text-white mt-3 mb-4" data-aos="fade-left">
               PROFESSIONAL CORPORATION
             </h3> -->
-            <div class="hero-btns mb-6" data-aos="fade-up">
+            <!-- <div class="hero-btns mb-6" data-aos="fade-up">
               <a href="#speakers" class="btn btn-brand-light me-2">OUR TEAM</a>
               <a href="#contact" class="btn btn-brand ms-2">CONTACT</a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -114,63 +115,73 @@
             data-aos-delay="50"
           >
             <div class="section-title">
-              <h1 class="display-4 fw-semibold">ABOUT AVL</h1>
-              <div class="line"></div>
+              <h1 class="display-4 fw-semibold">RESOLUTION-DRIVEN LEGAL REPRESENTATION</h1>
+              <div class="line" style="background-color:var(--c-light2)"></div>
               <p>
-                Aspen Valley Law, P.C. is a boutique law office located in
-                Carbondale, Colorado, representing clients in our local mountain
-                community and beyond.
+                Neiley & Morris is a boutique law firm representing clients in matters of Family Law and Criminal Defense. We provide a team of attorneys and staff who have extensive trial, evidentiary, and negotiation experience. Clients of Neiley & Morris receive reasoned legal advice and zealous advocacy as we help them navigate complex and difficult legal matters. 
               </p>
             </div>
           </div>
         </div>
         <div class="row justify-content-between align-items-center">
-          <div class="col-lg-6" id="abt-img" data-aos="fade-down" data-aos-delay="150">
-            <img src="./assets/images/about.jpg" alt="about" />
+          <div class="col-lg-6" id="abt-img-cont" data-aos="fade-down" data-aos-delay="170">
+            <!-- <img id="about-img" src="./assets/images/about.jpg" alt="about" />
+            <div id="overlay"></div> -->
           </div>
           <div class="col-lg-5" data-aos="fade-down" data-aos-delay="150">
             <h1 class="abouth1">A team you can trust.</h1>
-            <p class="mt-3 mb-4">
+            <!-- <p class="mt-3 mb-4">
               Our Legal Team recognizes and values the implications that our
               work has in the lives of our clients and their families,
               businesses, and communities. For that reason, we are committed to
               achieving client-focused, creative solutions for even the most
               complex and contentious matters.
-            </p>
+            </p> -->
 
             <div class="d-flex pt-4 mb-3">
-              <div class="iconbox me-4 bg-light">
-                <i class="ri-scales-3-fill"></i>
-              </div>
-
-              <div>
-                <h5 class="abouth5">Integrity</h5>
-                <p>Honest legal advice.</p>
-              </div>
-            </div>
-            <div class="d-flex mb-3">
-              <div class="iconbox me-4 bg-light">
-                <i class="ri-auction-line"></i>
+              <div class="iconbox me-4 ">
+                <i class="bi bi-diamond"></i>
               </div>
 
               <div>
                 <h5 class="abouth5">Advocacy</h5>
-                <p>We only offer the best to our clients.</p>
+                <p>We work with our clients directly to understand their needs and goals. We advocate for justice and resolution that is client-focused. </p>
               </div>
             </div>
-            <div class="d-flex">
-              <div class="iconbox me-4 bg-light">
-                <i class="ri-service-line"></i>
+            <div class="d-flex mb-3">
+              <div class="iconbox me-4 ">
+                <i class="bi bi-diamond"></i>
               </div>
 
               <div>
-                <h5 class="abouth5">Compassion</h5>
+                <h5 class="abouth5">Preparedness</h5>
+                <p>We prepare our cases and clients by conducting early document review, investigation, and hands-on case management. From the outset, we familiarize ourselves with the legal issues and challenges that our clients face, and we are prepared to tackle them—big or small.</p>
+              </div>
+            </div>
+            <div class="d-flex">
+              <div class="iconbox me-4 ">
+                <i class="bi bi-diamond"></i>
+              </div>
+
+              <div>
+                <h5 class="abouth5">Integrity</h5>
                 <p>
-                  We take pride in handling our cases with the utmost delicacy.
+                  We consider the short-term and long-term implications of our work and provide straightforward, honest legal advice to our clients. We guide and assist our clients in making important legal decisions.
                 </p>
               </div>
             </div>
           </div>
+        </div>
+        <div class="row"  data-aos="fade-down"
+        data-aos-delay="50">
+          
+          <hr class="hr-top">
+            <h1 class="about-bottom">
+              At Neiley &amp; Morris, clients come first.
+    
+              We seek resolution tailored to our clients’ goals and needs.
+            </h1>
+          <hr class="hr-bottom">
         </div>
       </div>
     </section>
@@ -185,19 +196,8 @@
             data-aos-delay="150"
           >
             <div class="section-title">
-              <h1 class="display-4 fw-semibold">LEGAL TEAM</h1>
-              <p id="widetext" class="text-white text-center">
-                We support our clients with a legal team comprised of attorneys
-                paralegals, and staff who have extensive trial, evidentiary, and
-                negotiation experience. Our legal team engages in thorough
-                preparation of our clients and our cases by conducting early
-                document review, investigation, hands-on case management, and
-                early identification of difficult legal issues. We intend to
-                assist clients in reaching out-of-court settlements where
-                possible. When settlement is not possible, we are prepared to
-                fervently advocate for our clients in court.
-              </p>
-              <div class="line"></div>
+              <h1 class="display-4 fw-semibold">TEAM</h1>
+              <div class="line" style="background-color: var(--c-light);"></div>
             </div>
           </div>
         </div>
@@ -210,8 +210,9 @@
                 </a>
               </div>
               <div class="speaker-content">
-                <h4 class="text-white">Sarah M. Neiley</h4>
-                <p class="mb-0 text-white">Attorney</p>
+                <h4>Sarah M. Neiley</h4>
+                <h5 class="mb-0 ">Managing Partner</h5>
+                <h5 class="mb-0 ">Family Law</h5>
               </div>
             </div>
           </div>
@@ -223,8 +224,9 @@
                 </a>
               </div>
               <div class="speaker-content">
-                <h4 class="text-white">Mackenzie J. Morris</h4>
-                <p class="mb-0 text-white">Attorney</p>
+                <h4>Mackenzie J. Morris</h4>
+                <h5 class="mb-0 ">Partner</h5>
+                <h5 class="mb-0 ">Criminal Defense & Family Law</h5>
               </div>
             </div>
           </div>
@@ -236,8 +238,8 @@
                 </a>
               </div>
               <div class="speaker-content">
-                <h4 class="text-white">Zoe M. Dotson</h4>
-                <p class="mb-0 text-white">Paralegal</p>
+                <h4>Zoe M. Dotson</h4>
+                <h5 class="mb-0 ">Paralegal</h5>
               </div>
             </div>
           </div>
@@ -247,7 +249,7 @@
 
     <!-- counter -->
     <section id="counter" class="section-padding">
-      <div class="container text-center">
+      <!-- <div class="container text-center">
         <div class="row g-4">
           <div
             class="col-lg-3 col-sm-6"
@@ -282,11 +284,11 @@
             <h6 class="text-uppercase mt-3 mb-0">Won for Clients</h6>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <!-- areas of practice - offerings -->
-    <section id="offerings" class="section-padding border-top bg-light">
+    <section id="offerings" class="section-padding border-top ">
       <div class="container">
         <div class="row">
           <div
@@ -304,18 +306,18 @@
             </div>
           </div>
         </div>
-        <div class="row g-4 text-center">
+        <div class="row g-4 text-center ">
           <div
             class="col-lg-4 col-sm-6"
             data-aos="fade-down"
             data-aos-delay="150"
           >
-            <div class="offerings theme-shadow p-lg-5 p-4">
-              <div class="iconbox">
+            <div class="offerings theme-shadow p-lg-5 p-4 family">
+              <!-- <div class="iconbox">
                 <i class="ri-parent-line"></i>
-              </div>
+              </div> -->
               <h5 class="mt-4 mb-3">Family Law</h5>
-              <p>Read More...</p>
+              <p>What We Do</p>
             </div>
           </div>
           <div
@@ -323,25 +325,25 @@
             data-aos="fade-down"
             data-aos-delay="250"
           >
-            <div class="offerings theme-shadow p-lg-5 p-4">
-              <div class="iconbox">
+            <div class="offerings theme-shadow p-lg-5 p-4 criminal">
+              <!-- <div class="iconbox">
                 <i class="ri-grid-line"></i>
-              </div>
+              </div> -->
               <h5 class="mt-4 mb-3">Criminal Defense</h5>
-              <p>Read More...</p>
+              <p>What We Do</p>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div
-              class="offerings theme-shadow p-lg-5 p-4"
+              class="offerings theme-shadow p-lg-5 p-4 appeals"
               data-aos="fade-down"
               data-aos-delay="350"
             >
-              <div class="iconbox">
+              <!-- <div class="iconbox">
                 <i class="ri-scales-3-fill"></i>
-              </div>
+              </div> -->
               <h5 class="mt-4 mb-3">Appeals</h5>
-              <p>Read More...</p>
+              <p>What We Do</p>
             </div>
           </div>
         </div>
@@ -697,7 +699,7 @@
             <div class="section-title">
               <h1 class="display-4 text-white fw-semibold">CONTACT</h1>
               <div class="line bg-white"></div>
-              <p class="text-white">Get in touch.</p>
+              <p class="text-white">To speak with our attorneys, please schedule a consultation. We look forward to speaking with you. </p>
             </div>
           </div>
         </div>
