--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ASPEN VALLEY LAW</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css
@@ -91,7 +92,7 @@
               class="text-uppercase fw-semibold display-1"
               data-aos="fade-right"
             >
-            NEILEY & MORRIS
+            NEILEY & MORRIS, LLC
             </h1>
             <!-- <h3 class="text-white mt-3 mb-4" data-aos="fade-left">
               PROFESSIONAL CORPORATION
@@ -308,7 +309,7 @@
         </div>
         <div class="row g-4 text-center ">
           <div
-            class="col-lg-4 col-sm-6"
+            class="prac"
             data-aos="fade-down"
             data-aos-delay="150"
           >
@@ -318,10 +319,12 @@
               </div> -->
               <h5 class="mt-4 mb-3">Family Law</h5>
               <p>What We Do</p>
+              <p class="prac-sub">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quam nihil velit architecto expedita odio quis incidunt natus perspiciatis, repellat ipsum repellendus, ipsa eveniet iusto sunt! Natus quidem similique eius.</p>
+
             </div>
           </div>
           <div
-            class="col-lg-4 col-sm-6"
+            class="prac"
             data-aos="fade-down"
             data-aos-delay="250"
           >
@@ -333,7 +336,7 @@
               <p>What We Do</p>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
+          <div class="prac">
             <div
               class="offerings theme-shadow p-lg-5 p-4 appeals"
               data-aos="fade-down"
@@ -951,5 +954,6 @@
         //
       });
     </script>
+     <script src="script.js"></script>
   </body>
 </html>
