--- a/index.html
+++ b/index.html
@@ -317,10 +317,37 @@
               <!-- <div class="iconbox">
                 <i class="ri-parent-line"></i>
               </div> -->
-              <h5 class="mt-4 mb-3">Family Law</h5>
+              <h5 class="mt-4 mb-3 prac-title">Family Law</h5>
               <p>What We Do</p>
-              <p class="prac-sub">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quam nihil velit architecto expedita odio quis incidunt natus perspiciatis, repellat ipsum repellendus, ipsa eveniet iusto sunt! Natus quidem similique eius.</p>
-
+            </div>
+            <div class="prac-sub">
+              <h6 class="sub-title">We represent Family Law clients involving the following legal matters:</h6>
+              <h6>Divorce and Legal Separation </h6>
+              <div class="line"></div>
+              High-Asset and Complex Estates<br>
+              Valuation and Allocation of Real Estate and Business Interests<br>
+              Same-Sex Divorce and Legal Separation<br>
+              Spousal Support<br>
+              Executive Compensation<br>
+              Common Law Marriage<br>
+              Contempt and Enforcement<br>
+              Modification of Spousal Support<br>
+              Prenuptial and Postnuptial Marital Agreements<br>
+              <div class="iconbox  ">
+                <i class="bi bi-diamond" style="margin: 0"></i>
+              </div>
+              <h6><i class="bi bi-diamond"></i>Parenting Rights:</h6>
+              Allocation of Parental Rights<br>
+              Same-Sex Parenting Rights<br>
+              Decision-Making<br>
+              Parenting Time<br>
+              Child Support and Expenses<br>
+              Relocation and Removal<br>
+              Modification of Child Support<br>
+              Modification of Parenting Plan<br>
+              <h6><i class="bi bi-diamond"></i>General:</h6>
+              Civil Protection Orders<br>
+              Appeals<br>
             </div>
           </div>
           <div
