--- a/index.html
+++ b/index.html
@@ -333,10 +333,12 @@
               Contempt and Enforcement<br>
               Modification of Spousal Support<br>
               Prenuptial and Postnuptial Marital Agreements<br>
-              <div class="iconbox  ">
+              <div class="iconbox">
                 <i class="bi bi-diamond" style="margin: 0"></i>
               </div>
-              <h6><i class="bi bi-diamond"></i>Parenting Rights:</h6>
+              <h6>Parenting Rights</h6>
+              <div class="line"></div>
+
               Allocation of Parental Rights<br>
               Same-Sex Parenting Rights<br>
               Decision-Making<br>
@@ -345,9 +347,16 @@
               Relocation and Removal<br>
               Modification of Child Support<br>
               Modification of Parenting Plan<br>
-              <h6><i class="bi bi-diamond"></i>General:</h6>
+              <div class="iconbox">
+                <i class="bi bi-diamond" style="margin: 0"></i>
+              </div>
+              <h6>General</h6>
+              <div class="line"></div>
               Civil Protection Orders<br>
               Appeals<br>
+              <div class="iconbox">
+                <i class="bi bi-diamond" style="margin: 0"></i>
+              </div>
             </div>
           </div>
           <div
@@ -356,9 +365,6 @@
             data-aos-delay="250"
           >
             <div class="offerings theme-shadow p-lg-5 p-4 criminal">
-              <!-- <div class="iconbox">
-                <i class="ri-grid-line"></i>
-              </div> -->
               <h5 class="mt-4 mb-3">Criminal Defense</h5>
               <p>What We Do</p>
             </div>
@@ -369,9 +375,7 @@
               data-aos="fade-down"
               data-aos-delay="350"
             >
-              <!-- <div class="iconbox">
-                <i class="ri-scales-3-fill"></i>
-              </div> -->
+              
               <h5 class="mt-4 mb-3">Appeals</h5>
               <p>What We Do</p>
             </div>
