finalizing front page

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             </div>
           </div>
         </div>
-        <div class="row g-4 text-center ">
+        <div class="row g-4 text-center box-row">
           <div
             class="prac"
             data-aos="fade-down"
@@ -396,7 +396,7 @@
               </div>
             </div>
           </div>
-          <div class="prac">
+          <!-- <div class="prac">
             <div
               class="offerings theme-shadow p-lg-5 p-4 appeals"
               data-aos="fade-down"
@@ -405,7 +405,7 @@
               <h5 class="mt-4 mb-3">Appeals</h5>
               <p>What We Do</p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -757,9 +757,9 @@
             data-aos-delay="150"
           >
             <div class="section-title">
-              <h1 class="display-4 text-white fw-semibold">CONTACT</h1>
-              <div class="line bg-white"></div>
-              <p class="text-white">To speak with our attorneys, please schedule a consultation. We look forward to speaking with you. </p>
+              <h1 class="display-4 fw-semibold">CONTACT</h1>
+              <div class="line"></div>
+              <p>To speak with our attorneys, please schedule a consultation. We look forward to speaking with you. </p>
             </div>
           </div>
         </div>
@@ -772,7 +772,7 @@
             <form
               action="https://api.web3forms.com/submit"
               method="POST"
-              class="row g-3 p-lg-5 p-4 bg-white theme-shadow"
+              class="row g-3 p-lg-5 p-4  theme-shadow"
             >
               <div class="form-group col-lg-6">
                 <input
@@ -906,16 +906,16 @@
     </section> -->
 
     <!-- footer -->
-    <footer class="bg-dark">
+    <footer class="footer-cont">
       <div class="footer-top">
         <div class="container">
           <div class="row gy-5">
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-sm-6 special-foot">
               <a href="#">
-                <img src="./assets/images/logo-mid.png" alt="" />
+                <img src="./assets/images/AVL-LOGO-LightCamel.png" alt="" />
               </a>
-              <div class="line bg-white"></div>
-              <p>ASPEN VALLEY LAW</p>
+              <div class="line special"></div>
+              <p>NEILEY & MORRIS</p>
               <div class="social-icons">
                 <a href="#">
                   <i class="ri-instagram-line"></i>
@@ -926,7 +926,7 @@
               </div>
             </div>
             <div class="footer-box col-lg-3 col-sm-6">
-              <h5 class="mb-0 text-white">LEARN MORE</h5>
+              <h5 class="mb-0 ">LEARN MORE</h5>
               <div class="line"></div>
               <ul class="footer-box">
                 <li>
@@ -947,26 +947,26 @@
               </ul>
             </div>
             <div class="footer-box col-lg-3 col-sm-6">
-              <h5 class="mb-0 text-white">CONNECT</h5>
+              <h5 class="mb-0 ">CONNECT</h5>
               <div class="line"></div>
               <ul class="footer-box">
                 <li>
                   <a href="./careers.html">Careers</a>
                 </li>
                 <li>
-                  <a href="#contact">Get In Touch</a>
+                  <a href="#contact">Contact</a>
                 </li>
               </ul>
             </div>
             <div class="footer-box col-lg-3 col-sm-6">
-              <h5 class="mb-0 text-white">CONTACT</h5>
+              <h5 class="mb-0 ">CONTACT</h5>
               <div class="line"></div>
               <ul class="footer-box">
                 <li>320 Main Street, Suite 200</li>
                 <li>Carbondale, CO 81623</li>
                 <li>970-963-6363</li>
-                <li>office@aspenvalleylaw.com</li>
-                <li>www.aspenvalleylaw.com</li>
+                <li>office@neileymorris.com</li>
+                <li>www.neileymorris.com</li>
               </ul>
             </div>
           </div>
@@ -977,10 +977,10 @@
           <div class="row g-4 justify-content-between">
             <div class="col-auto">
               <p class="mb-0">
-                © Copyright Aspen Valley Law. All Rights Reserved.
+                © Copyright Neiley & Morris. All Rights Reserved.
               </p>
               <p class="mb-0">
-                Aspen Valley Law, P. C. is not affiliated with any governmental
+                Neiley & Morris LLC is not affiliated with any governmental
                 entity.
               </p>
             </div>
